--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Ur name shows up on the new tab</title>
+    <title>Jason Liu</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -17,37 +17,54 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Your Nanme</h1>
-        <img src="https://github.com/jasonxyliu" alt="profile_pic" style="width:500px;height:400px;">
+        <h1>Jason Liu</h1>
+        <img src="https://jasonxyliu.github.io/img/profile_pic.jpg" alt="profile_pic" style="width:500px;height:400px;">
         <p>
-          <a href="https://github.com/jasonxyliu" target="_blank" rel="noopener noreferrer"><i class="ai ai-cv" style="font-size:60px;color:orange;"></i></a>
+          <a href="https://jasonxyliu.github.io/cv.pdf" target="_blank" rel="noopener noreferrer"><i class="ai ai-cv" style="font-size:50px;color:orange;"></i></a>
 
-          <a href="https://github.com/jasonxyliu" target="_blank" rel="noopener noreferrer"><i class="fa fa-github" style="font-size:60px;color:orange;"></i></a>
+          <a href="https://github.com/jasonxyliu" target="_blank" rel="noopener noreferrer"><i class="fa fa-github" style="font-size:50px;color:orange;"></i></a>
 
-          <a href="https://github.com/jasonxyliu" target="_blank" rel="noopener noreferrer"><i class="ai ai-google-scholar" style="font-size:60px;color:orange;"></i></a>
+          <a href="https://scholar.google.com/citations?hl=en&user=jyF9UHAAAAAJ" target="_blank" rel="noopener noreferrer"><i class="ai ai-google-scholar" style="font-size:50px;color:orange;"></i></a>
 
-          <a href="https://github.com/jasonxyliu" target="_blank" rel="noopener noreferrer"><i class="fa fa-twitter" style="font-size:60px;color:orange;"></i></a></p>
+          <a href="https://twitter.com/jxyliu" target="_blank" rel="noopener noreferrer"><i class="fa fa-twitter" style="font-size:50px;color:orange;"></i></a>
+
+          <a href="https://www.linkedin.com/in/jason-liu-11406498/" target="_blank" rel="noopener noreferrer"><i class="fa fa-linkedin" aria-hidden="true" style="font-size:50px;color:orange;"></i></a>
+        </p>
       </header>
       <section>
         <h1>Hello and Welcome!</h1>
 
-        <p>A short intro here.  <a href="https://jasonxyliu.github.io/" target="_blank" rel="noopener noreferrer">embed link</a> .</p>
+        <p>
+          I am a computer science Ph.D. student at Brown University.
+          I am fortunately to be advised by <a href="https://h2r.cs.brown.edu/" target="_blank" rel="noopener noreferrer">Prof. Stefanie Tellex</a> and to work with <a href="http://cs.brown.edu/people/gdk/" target="_blank" rel="noopener noreferrer">Prof. George Konidaris</a>.
+          My research is supported by the <a href="https://www.nsfgrfp.org/" target="_blank" rel="noopener noreferrer">NSF Graduate Research Fellowship</a> and <a href="https://www.jkcf.org/cooke-scholar-community/graduate-scholarship/" target="_blank" rel="noopener noreferrer">Cooke Graduate Scholarship</a>.
+        </p>
+
 
         <h2>Research Interests</h2>
 
-        <p>Decrible your research interests</p>
+        <p>
+          I am interested in building intelligent agents that can perform long-horizon tasks in diverse environments provided with sparse reward signals.
+          To that end, I would like to leverage structures in natural language commands from humans and vision to help machines plan and learn more correctly and efficiently.
+        </p>
+        <!-- help robots sufficiently explore and generalize to different domains -->
 
-        <h2> Publications </h2>
 
-        <p> <em> Title. </em> [<a href="https://jasonxyliu.github.io/" target="_blank" rel="noopener noreferrer">paper link</a>] <br> Arthor list. <br> Conference, Year. </p>
+        <h2> Selected Papers </h2>
 
-        <p> <em> Title. </em> [<a href="https://jasonxyliu.github.io/" target="_blank" rel="noopener noreferrer">paper link</a>] <br> Arthor list. <br> Conference, Year. </p>
+        <p> <em> Specificity-Controlled Video Captioning. </em> <br> Jason Liu, Ellie Pavlick, Daniel Ritchie, Stefanie Tellex. <br> Unpublished Manuscript 2019. </p>
 
-        <p> <em> Title. </em> [<a href="https://jasonxyliu.github.io/" target="_blank" rel="noopener noreferrer">paper link</a>] <br> Arthor list. <br> Conference, Year. </p>
+        <p> <em> Dex-Net 3.0: Computing Robust Vacuum Suction Grasp Targets in Point Clouds Using a New Analytic Model and Deep Learning. </em> [<a href="https://jasonxyliu.github.io/paper/dexnet-3_icra18.pdf" target="_blank" rel="noopener noreferrer">paper</a>, <a href="https://berkeleyautomation.github.io/dex-net/#dexnet_3" target="_blank" rel="noopener noreferrer">site</a>] <br> Jeffrey Mahler, Matthew Matl, Xinyu Liu, Albert Li, David Gealy, Ken Goldberg. <br> IEEE International Conference on Robotics and Automation (ICRA) 2018. </p>
 
-        <h2> Fun </h2>
+        <p> <em> Detecting Phone Theft Using Machine Learning. </em> [<a href="https://jasonxyliu.github.io/paper/phone-theft_iciss18.pdf" target="_blank" rel="noopener noreferrer">paper</a>] <br> Xinyu Liu, David Wagner, Serge Egelman. <br> International Conference on Information Science and System (ICISS) 2018. </p>
 
-        <p> Fun facts. </p>
+        <p> <em> Dex-Net 2.0: Deep Learning to Plan Robust Grasps with Synthetic Point Clouds and Analytic Grasp Metrics. </em> [<a href="https://jasonxyliu.github.io/paper/dexnet-2_rss17.pdf" target="_blank" rel="noopener noreferrer">paper</a>, <a href="https://berkeleyautomation.github.io/dex-net/#dexnet_2" target="_blank" rel="noopener noreferrer">site</a>] <br> Jeffrey Mahler, Jacky Liang, Sherdil Niyaz, Michael Laskey, Richard Doan, Xinyu Liu, Juan Aparicio Ojea, Ken Goldberg. <br> Robotics: Science and Systems (RSS) 2017. </p>
+
+
+        <h2> Fun Outside Work </h2>
+
+        <p> I love reading books, playing basketball, hiking, camping and <a href="https://www.imdb.com/name/nm0634240/" target="_blank" rel="noopener noreferrer">movies</a> directed by Christopher Nolan. When I read, I listen to guitar or Jazz BGM. The books I recently read are The Road Less Traveled and The Autobiography of Benjamin Franklin. I am now reading How We Think by John Dewey. My <q>thinking</q> started after reading the first 20 pages... </p>
+
 
         <h2> Contact </h2>
 
